syntax = "proto3";
package imdb2meta;

option go_package = "github.com/deflix-tv/imdb2meta/pb";

// All title types in the title.basics.tsv.gz dataset as of 2021-01-15.
enum TitleType {
    MOVIE = 0;
    SHORT = 1;
    TV_EPISODE = 2;
    TV_MINI_SERIES = 3;
    TV_MOVIE = 4;
    TV_SERIES = 5;
    TV_SHORT = 6;
    TV_SPECIAL = 7;
    VIDEO = 8;
    VIDEO_GAME = 9;
    AUDIOBOOK = 10;
    RADIO_SERIES = 11;
    EPISODE = 12;
}

message Meta {
    string id = 1; // IMDb ID, including "tt" prefix
    TitleType title_type = 2;
    string primary_title = 3;
    string original_title = 4; // Only filled if different from the primary title
    bool is_adult = 5;
    int32 start_year = 6; // Start year for TV shows, release year for movies. Can be 0.
    int32 end_year = 7; // Only relevant for TV shows
    int32 runtime = 8; // In minutes. Can be 0.
    repeated string genres = 9; // Up to three genres. Can be empty.
}
